Progress on making changes based on feedback